# quickcheck-enum-instances

./: quickcheck-enum-instances.cabal  quickcheck-enum.cabal
src/Test/QuickCheck/: Enum.hs
src/Test/QuickCheck/Instances/: Enum.hs
