cabal-version: 2.0
name: quickcheck-enum-instances
version: 0.1.0.0
description:
  Instances of the `Arbitrary` typeclass for all of the types
  in `enum-types`.
homepage: https://github.com/andrewthad/quickcheck-enum-instances
bug-reports: https://github.com/andrewthad/quickcheck-enum-instances/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/quickcheck-enum-instances

library
  exposed-modules: Test.QuickCheck.Instances.Enum
  hs-source-dirs: src
  build-depends:
      base >= 4.9.1.0 && < 5
    , enum-types >= 0.1
    , QuickCheck >= 2.9
  default-language: Haskell2010

