cabal-version: 2.0
name: quickcheck-enum
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/quickcheck-enum#readme>
homepage: https://github.com/andrewthad/quickcheck-enum#readme
bug-reports: https://github.com/andrewthad/quickcheck-enum/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/quickcheck-enum

library
  exposed-modules: Test.QuickCheck.Enum
  hs-source-dirs: src
  build-depends:
      base >= 4.9.1.0 && < 5
    , QuickCheck >= 2.9
  default-language: Haskell2010

